# knack

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PROJECT.md  README.md
.agents/: knack.toml
.github/workflows/: ci.yml  publish-binaries.yml  publish-public-registry.yml  publish-registry-image.yml  release-plz.yml
.opencode/: opencode.json
examples/cloudflare-worker/: README.md  build.sh  worker.js  wrangler.toml
knack/: CHANGELOG.md  Cargo.toml
knack-cli/: Cargo.toml
knack-core/: CHANGELOG.md  Cargo.toml  LICENSE
knack-core/src/: archive.rs  lib.rs
knack-registry/: CHANGELOG.md  Cargo.toml
knack-registry/src/: main.rs
knack-search-wasm/: Cargo.toml
knack-search-wasm/src/: lib.rs
knack/src/: main.rs
registries/: public.toml
scripts/: install.sh
skillhub-cli/: Cargo.toml
skillhub-cli/src/: main.rs
skillhub-core/: Cargo.toml
skillhub-core/src/: lib.rs
skillhub-registry/: Cargo.toml
skillhub-registry/src/: main.rs
skills/find-skills/: SKILL.md
