[workspace]
resolver = "3"
members = [
    "knack",
    "knack-registry",
    "knack-core",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ajac-zero/knack"
homepage = "https://github.com/ajac-zero/knack"
authors = ["Anibal Angulo <ajcardoza2000@gmail.com>"]
