[package]
name = "knack-core"
description = "Core types and validation for knack Agent Skills tooling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["agent", "ai", "skill", "package"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"

[dev-dependencies]
serde_json = "1.0.150"
toml = "1.1.2"
