[package]
name = "knack-registry"
description = "Self-hostable HTTP registry server for knack Agent Skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["agent", "ai", "skill", "registry", "server"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
anyhow = "1.0.98"
axum = "0.8.7"
clap = { version = "4.5.40", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
# The `archive` default feature provides the shared tarball
# create/unpack used for serving, build-static, and publish uploads.
knack-core = { version = "0.3.1", path = "../knack-core" }
tempfile = "3.24.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.9.8"
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
