[package]
name = "knack-search-wasm"
description = "WASM bindings exposing knack-core's registry search, for static (non-Rust) deployments that need the same matching/ranking as knack-registry serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
knack-core = { version = "0.3.1", path = "../knack-core" }
serde_json = "1.0.150"
wasm-bindgen = "0.2.104"
