[package]
name = "knack-search-wasm"
description = "WASM bindings exposing knack-core's registry search, for static (non-Rust) deployments that need the same matching/ranking as knack-registry serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# default-features = false drops knack-core's `archive` feature —
# tar/flate2 aren't used by search and don't belong in a wasm32 build.
knack-core = { version = "0.3.1", path = "../knack-core", default-features = false }
serde_json = "1.0.150"
wasm-bindgen = "0.2.104"
