[package]
name = "knack"
version = "0.1.1"
edition = "2024"
description = "CLI for packaging, discovering, and installing Agent Skills"
license = "MIT"

[[bin]]
name = "knack"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
directories = "6.0.0"
flate2 = "1.1.5"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
knack-core = { version = "0.1.1", path = "../knack-core" }
tar = "0.4.44"
tempfile = "3.24.0"
toml = "0.9.8"
