[package]
name = "knack"
description = "CLI for packaging, discovering, and installing Agent Skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["agent", "ai", "skill", "cli", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "knack"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.13"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
flate2 = "1.1.5"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
knack-core = { version = "0.4.0", path = "../knack-core" }
tar = "0.4.44"
tempfile = "3.24.0"
toml = "0.9.8"
base64 = "0.22.1"
rand = "0.9.2"
sha2 = "0.10.9"
url = "2.5.7"
webbrowser = "1.0.6"
