[package]
name = "skillhub-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "skillhub"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
flate2 = "1.1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tar = "0.4.44"
