[package]
name = "skillhub-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "skillhub"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
flate2 = "1.1.5"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.24.0"
toml = "0.9.8"
