[package]
name = "skillhub-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.7"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
skillhub-core = { path = "../skillhub-core" }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.9.8"
